welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: value >- is not a member of Int
    if (nums(l)<4 && nums(l)>-1 && nums(l-1)==7 && nums(l-2)==2){
                            ^